src/deployment/kubernetes/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pandemieduell-server
spec:
  selector:
    component: server
  ports:
    - protocol: TCP
      port: 80
      name: web
      targetPort: web
